--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -15,11 +15,11 @@
 <script type="text/javascript" src="{% static 'bower_components/ngDialog/js/ngDialog.js' %}"></script>
 <script type="text/javascript" src="{% static 'lib/snackbarjs/snackbar.min.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'javascripts/djangular.js' %}"></script>
+{#<script type="text/javascript" src="{% static 'javascripts/djangular.js' %}"></script>#}
 
-
-<script type="text/javascript" src="{% static 'javascripts/config.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/routes.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/cmath.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/cmath.config.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascripts/cmath.routes.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/authentication/authentication.module.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/authentication/services/authentication.service.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/authentication/controllers/register.controller.js' %}"></script>
