--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="{% static 'lib/snackbarjs/snackbar.min.js' %}"></script>
 
 {#<script type="text/javascript" src="{% static 'javascripts/djangular.js' %}"></script>#}
-
+<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/cmath.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/cmath.config.js' %}"></script>
 <script type="text/javascript" src="{% static 'javascripts/cmath.routes.js' %}"></script>
